maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:5: error: not found: value randomint3
    i=randomint3()
      ^